# OGL

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
demo/: CMakeLists.txt
demo/01_pointlight/: CMakeLists.txt  point_main.cpp
demo/02_spotlight/: CMakeLists.txt  spotlight_main.cpp
demo/03_directionallight/: CMakeLists.txt  directionallight_main.cpp
demo/04_shadow_mapping/: CMakeLists.txt  shadow_mapping_main.cpp
demo/05_postprocess/: CMakeLists.txt  postprocess_main.cpp
engine/: CMakeLists.txt
engine/runtime/: CMakeLists.txt  application.cpp  application.h
engine/runtime/global/: global_context.cpp  global_context.h
engine/runtime/log/: log_system.cpp  log_system.h  macro.h
engine/runtime/mesh/: mesh.h  mesh_io.h
engine/runtime/platform/: window_system.cpp  window_system.h
engine/runtime/renderer/: buffer.h  camera.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.h  light.h  material.h  rasterizer.cpp  rasterizer.h  render_system.cpp  render_system.h  renderpass.h  rhi_struct.h  scene.h  shadow_map.cpp  shadow_map.h  texture.cpp  texture.h
engine/runtime/renderer/pass/: main_pass.h  post_process_pass.h  shadow_pass.h
engine/runtime/resource/: assetmanager.cpp  assetmanager.h
